Resolves: tdf#104711 adjust range reference constructed of named anchors

A constructed range reference of named anchors (i.e. extended during
expression compilation) forms a range listened at that needs to be
adjusted if the cell is shifted and one or both anchor parts are
individually named relative references.

Currently the resulting range (ScComplexRefData aka DoubleRef) does not
know to distinguish between whether its anchors are the result of a
literal range in a named expression or the result of individually named
anchors, so such RelName DoubleRef needs to be adjusted unconditionally
when shifting or moving the formula cell.

Change-Id: I75e2cc79ac60116671acce7641567337d5f5f7ed
(cherry picked from commit 439b2a134218b93e6ca9fa23005b89c19498f586)
Reviewed-on: https://gerrit.libreoffice.org/32924
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit 33c1491acb3fd6b87ac16d80ed728f423762e867)